fixed img overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,6 @@
 }
 #qrcode > img{
     max-width: 100% !important;
+    width: 90% !important;
+    margin: 0 auto !important;
 }
